[metadata]

name = hedera-mirror-sdk
version = 0.0.1
author = Bobby Stearman
author_email = bobby@didcoding.com
description = This is a simple Python library to facilitate the usage of the Hedera mirror node API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bobby-didcoding/hedera-mirror-sdk
project_urls =
    Bug Tracker = https://github.com/bobby-didcoding/hedera-mirror-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
   
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests == 3.2.2
    six == 1.16.0

[options.packages.find]
where = src